--- a/app-empleados/src/app/empleado-hijo-c/empleado-hijo-c.component.html
+++ b/app-empleados/src/app/empleado-hijo-c/empleado-hijo-c.component.html
@@ -2,8 +2,10 @@
   <div class="row">
     <div class="col">
       <div>
-        {{indice+1}} {{empleadoLista.nombre}} {{empleadoLista.apellido}} {{empleadoLista.cargo}}
-        {{empleadoLista.salario}}
+        <a [routerLink]="['/actualiza', indice]">
+          {{indice+1}} {{empleadoLista.nombre}} {{empleadoLista.apellido}} {{empleadoLista.cargo}}
+          {{empleadoLista.salario}}
+        </a>
       </div>
       <app-caracteristicas-empleado (caracteristicasEmpleados)="agregarCaracteristica($event)">
       </app-caracteristicas-empleado>
