--- a/app-empleados/src/app/actualiza-component/actualiza-component.component.html
+++ b/app-empleados/src/app/actualiza-component/actualiza-component.component.html
@@ -16,7 +16,7 @@
       <input type="text" name="salario" id="salario" placeholder="Introduce Salario" class="form-control"[(ngModel)] = "cuadroSalario">
     </div>
     <div class="col">
-      <button type="submit" class="btn btn-primary mt-3" (click)="actualizaEmpleado()">Actualiza</button>
+      <button type="submit" class="btn btn-primary mt-3" (click)="actualizaEmpleado()" style="margin-right: 50px;">Accion</button>
     </div>
   </form>
 
